# qho426

./: .gitignore  README.md  main.py  pyproject.toml
basics/decisions/: andOperator.py  orOperator.py
basics/decisions/nestedDecisions/: multipleNested.py
basics/decisions/simpleDecisions/: comparison_operators.py  counter.py  modulo_operator.py
basics/functions/: asciiCharacter.py  asciiCode.py  functionCalls.py  functionWithLoop.py  functionWithNesting.py  functionWithParameter.py  functionWithParameters.py  multipleFunctions.py  returnValues.py  simpleFunction.py
basics/input/: ascii_robot.py  data_types.py  glasses.py  strOper.py
basics/modules/: guessTheNumber.py
basics/output/: ascii_art.py  escape_characters.py  multiline_message.py
basics/repetitions/forLoops/: characters.py  countSteps.py  membershipOperator.py  range.py  reverse.py  simple.py
basics/repetitions/nestedLoops/: nested.py  nesting.py
basics/repetitions/whileLoops/: ascii.py  count.py  factorial.py  len.py  simple.py  sum100.py  sumUserNumbers.py
data/files/: cwd.py
data/files/txt/: generate.py
data/lists/: index_list.py  iterate_list.py  populate_list.py  simple_list.py
data/sets/: set_from_list.py  sorted_set.py
data/tuples/: function_tuple.py  nested_tuple.py  simple_tuple.py
decisions/: if_.py
decisions/nestedDecisions/: nested.py
decisions/simpleDecisions/: comparison_operators.py  if_elif_else.py  if_else.py
visual/plots/: sqares.py
